--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     background-image: url("Images/BG.png");
     background-repeat: none;
     background-size: cover;
+    background-attachment: fixed;
     
     text-align: center;
 }
